--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ cursor:pointer;
 // 🔴 IMPORTANT: REPLACE THIS URL WITH YOUR NGROK URL
 // Example: "https://a1b2-100-200.ngrok-free.app"
 // ==========================================
-const API_BASE_URL = "REPLACE_THIS_WITH_YOUR_NGROK_URL"; 
+const API_BASE_URL = "https://claustral-mable-dissectible.ngrok-free.dev";
 
 const tg = window.Telegram.WebApp;
 tg.ready();
