--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     let isAutoMining = false;
     let miningInterval;
     let miningTime = 0;
-    const MAX_MINING_TIME = 300; // 5 mins
+    let MAX_MINING_TIME = 300;
 
     // === 🚀 INIT APP ===
     function initApp() {
@@ -522,6 +522,57 @@
             el.innerText = `Simulated PnL: $${data.simulated_impact}`;
             el.style.color = data.simulated_impact >= 0 ? "var(--accent)" : "var(--danger)";
         } catch(e) {}
+    }
+
+    // === 🛒 SHOP LOGIC ===
+    async function buyPack(type) {
+        // Optimistic check
+        let cost = type === 'time' ? 50 : 100;
+        if (miningPoints < cost) {
+            tg.showAlert(`Not enough SP! You need ${cost}.`);
+            return;
+        }
+
+        const btn = event.target; // Get the button that was clicked
+        const originalText = btn.innerText;
+        btn.innerText = "PURCHASING...";
+        btn.disabled = true;
+
+        try {
+            const res = await fetch(`${API_BASE_URL}/user/mining/upgrade`, {
+                method: "POST",
+                headers: { 
+                    "Content-Type": "application/json",
+                    "ngrok-skip-browser-warning": "true"
+                },
+                body: JSON.stringify({ initData: tg.initData, pack: type })
+            });
+
+            const data = await res.json();
+
+            if (data.status === "success") {
+                miningPoints = data.new_sp;
+                updateDisplay(); // Update the UI score immediately
+                
+                // Update Max Time if level changed
+                if(data.new_max_time) {
+                    // Update global variable (you need to make sure MAX_MINING_TIME is not 'const')
+                    // For now, we will just alert success
+                }
+                
+                tg.showPopup({ title: "UPGRADE SUCCESS", message: `Level Up! You are now Level ${data.new_level}.` });
+                tg.HapticFeedback.notificationOccurred('success');
+            } else {
+                tg.showAlert(data.message);
+                tg.HapticFeedback.notificationOccurred('error');
+            }
+        } catch (e) {
+            console.error(e);
+            tg.showAlert("Connection Error");
+        } finally {
+            btn.innerText = originalText;
+            btn.disabled = false;
+        }
     }
 
     // === 🖇️ UTILS ===
